--- a/src/styles/brands.css
+++ b/src/styles/brands.css
@@ -14,7 +14,7 @@
 .brands-container {
   max-width: 1232px;
   margin: 0 auto;
-
+overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,21 +25,23 @@
 /* TITLE                         */
 /* ============================= */
 .brands-title {
-    height: 30px;
+    height: auto;
     width: 633px;
   font-size: 30px;
   font-weight: 700;
-  line-height: 100%;
+  line-height: 1.2;
   letter-spacing: 0px;
   color: #218CAC;
   text-align: center;
+  white-space: nowrap;
 }
 
 /* ============================= */
 /* LOGOS ROW                     */
 /* ============================= */
 .brands-row {
-  width: 1232px;
+  width: 100%;
+  max-width: 1232px;
   height: 48px;
 
   display: flex;
