--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,6 +14,7 @@
   max-width: 1232px;
   height: 150px;
   margin: 0 auto;
+  /* margin-top: 80px; */
   padding-bottom: 40px;
 
   display: flex;
@@ -24,11 +25,25 @@
 /* ================= BRAND ================= */
 .footer-brand {
   max-width: 260px;
-  font-family: proxima-nova, sans-serif;
+  
+ 
+}
+
+.footer-brand p{
+  /* max-width: 260px; */font-weight: 400;
+  font-style: "regular";
+  line-height: 22px;
+  letter-spacing: 0%;
+  width: 252px;
+  height: 66px;
+  
+ 
 }
 
 .footer-logo {
-  height: 34px;
+  width: 198.51;
+  height: 31.34px ;
+  
   margin-bottom: 14px;
 }
 
@@ -41,18 +56,25 @@
 /* ================= COLUMNS ================= */
 .footer-col h4,
 .footer-connect h4 {
-  font-family: proxima-nova, sans-serif;
+ line-height: 24px;
   margin-bottom: 16px;
-  font-size: 16px;
-  font-weight: 700;
-  color: #1a1a1a;
+  height: 24px;
+  width: 70px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #2A2D32;
 }
 
 .footer-col a {
   display: block;
+  width: 81px;
+  height: 16px;
+  font-weight: 400;
   margin-bottom: 10px;
-  font-size: 14px;
-  color: #333;
+  line-height: 100%;
+  letter-spacing: 0px;
+  font-size: 16px;
+  color: #2A2D32;
   text-decoration: none;
 }
 
@@ -93,20 +115,38 @@
   margin: 0 auto;
   padding: 20px 0;
   border-top: 1px solid #eee;
-
+font-size: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  font-family: proxima-nova, sans-serif;
+  
   font-size: 13px;
-  color: #666;
+  color: #2A2D32;
+}
+.footer-bottom span {
+  height: 16px;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: "regular";
 }
 
 /* ================= LINKS ================= */
 .footer-links span {
   margin: 0 8px;
   cursor: pointer;
+}
+
+.footer-links a{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 100%;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-style: "regular";
+  color: #2A2D32;
 }
 
 /* ================= RESPONSIVE ================= */
